--- a/index.html
+++ b/index.html
@@ -27,7 +27,32 @@
             <!-- Motorsport Weather -->
             <section id="motorsport" class="tab-content active">
                 <h2 class="text-center text-2xl font-semibold text-blue-400 mb-4">Motorsport Weather</h2>
-                <div id="weather" class="grid md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
+                <div id="weather" class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <!-- Tile 1: Pretoria Weather & Zwartkops Raceway -->
+                    <div id="card-pretoria" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
+                        <h3 class="text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
+                        <p id="pretoria-temp">Temp: Loading...</p>
+                        <p id="pretoria-condition">Condition: Loading...</p>
+                    </div>
+                    <!-- Tile 2: Silverstone -->
+                    <div id="card-silverstone" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
+                        <h3 class="text-lg font-bold">Silverstone, UK</h3>
+                        <p id="silverstone-temp">Temp: Loading...</p>
+                        <p id="silverstone-condition">Condition: Loading...</p>
+                    </div>
+                    <!-- Tile 3: Monaco -->
+                    <div id="card-monaco" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
+                        <h3 class="text-lg font-bold">Monaco</h3>
+                        <p id="monaco-temp">Temp: Loading...</p>
+                        <p id="monaco-condition">Condition: Loading...</p>
+                    </div>
+                    <!-- Tile 4: Suzuka -->
+                    <div id="card-suzuka" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
+                        <h3 class="text-lg font-bold">Suzuka, JP</h3>
+                        <p id="suzuka-temp">Temp: Loading...</p>
+                        <p id="suzuka-condition">Condition: Loading...</p>
+                    </div>
+                </div>
             </section>
 
             <!-- Sport -->
@@ -51,4 +76,3 @@
     </div>
 </body>
 </html>
-
