--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                         <h3 class="text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
                         <p id="zwartkops-temp">Temp: Loading...</p>
                         <p id="zwartkops-condition">Condition: Loading...</p>
+                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                        <ul class="text-sm list-disc list-inside">
+                            <li>1 February (Passion for Speed)</li>
+                            <li>1 March (Regional)</li>
+                            <li>5 April (Historic)</li>
+                            <li>17 May (Regional)</li>
+                            <li>21 June (Nationals)</li>
+                            <li>12 July (500)</li>
+                            <li>9 August (Historic)</li>
+                            <li>25 October (Nationals)</li>
+                            <li>8 November (Regionals)</li>
+                        </ul>
                     </div>
                     <!-- Tile 2: Ultimate Raceway, Vereeniging -->
                     <div id="card-ultimate" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
