--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
                         <h3 class="text-lg font-bold">Mahem Raceway, Pretoria</h3>
                         <p id="mahem-temp">Temp: Loading...</p>
                         <p id="mahem-condition">Condition: Loading...</p>
+                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                        <ul class="text-sm list-disc list-inside">
+                            <li>8 February (Hot Rods SA vs UK)</li>
+                            <li>1 March</li>
+                            <li>5 April</li>
+                            <li>31 May</li>
+                            <li>28 June</li>
+                            <li>26 July</li>
+                            <li>16 August</li>
+                            <li>6 September</li>
+                            <li>4 October (Hot Rods)</li>
+                            <li>15 November</li>
+                            <li>6 December (Fireworks)</li>
+                        </ul>
                     </div>
                 </div>
             </section>
