--- a/index.html
+++ b/index.html
@@ -51,12 +51,31 @@
                         <h3 class="text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
                         <p id="ultimate-temp">Temp: Loading...</p>
                         <p id="ultimate-condition">Condition: Loading...</p>
+                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                        <ul class="text-sm list-disc list-inside">
+                            <li>1 February (Hot Rods SA vs UK)</li>
+                            <li>1 March (SA vs USA)</li>
+                            <li>5 April</li>
+                            <li>3 May</li>
+                            <li>6 September</li>
+                            <li>4 October</li>
+                            <li>1 November</li>
+                            <li>6 December</li>
+                        </ul>
                     </div>
                     <!-- Tile 3: The Rock Raceway, Brakpan -->
                     <div id="card-rock" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
                         <h3 class="text-lg font-bold">The Rock Raceway, Brakpan</h3>
                         <p id="rock-temp">Temp: Loading...</p>
                         <p id="rock-condition">Condition: Loading...</p>
+                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                        <ul class="text-sm list-disc list-inside">
+                            <li>25 January (Rock Mania)</li>
+                            <li>8 March (SA vs USA)</li>
+                            <li>12 April</li>
+                            <li>10 May</li>
+                            <li>14 June</li>
+                        </ul>
                     </div>
                     <!-- Tile 4: Mahem Raceway, Pretoria -->
                     <div id="card-mahem" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
