--- a/index.html
+++ b/index.html
@@ -34,17 +34,7 @@
                         <p id="zwartkops-temp">Temp: Loading...</p>
                         <p id="zwartkops-condition">Condition: Loading...</p>
                         <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul class="text-sm list-disc list-inside">
-                            <li>1 February (Passion for Speed)</li>
-                            <li>1 March (Regional)</li>
-                            <li>5 April (Historic)</li>
-                            <li>17 May (Regional)</li>
-                            <li>21 June (Nationals)</li>
-                            <li>12 July (500)</li>
-                            <li>9 August (Historic)</li>
-                            <li>25 October (Nationals)</li>
-                            <li>8 November (Regionals)</li>
-                        </ul>
+                        <ul id="zwartkops-schedule" class="text-sm list-disc list-inside"></ul>
                     </div>
                     <!-- Tile 2: Ultimate Raceway, Vereeniging -->
                     <div id="card-ultimate" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
@@ -52,16 +42,7 @@
                         <p id="ultimate-temp">Temp: Loading...</p>
                         <p id="ultimate-condition">Condition: Loading...</p>
                         <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul class="text-sm list-disc list-inside">
-                            <li>1 February (Hot Rods SA vs UK)</li>
-                            <li>1 March (SA vs USA)</li>
-                            <li>5 April</li>
-                            <li>3 May</li>
-                            <li>6 September</li>
-                            <li>4 October</li>
-                            <li>1 November</li>
-                            <li>6 December</li>
-                        </ul>
+                        <ul id="ultimate-schedule" class="text-sm list-disc list-inside"></ul>
                     </div>
                     <!-- Tile 3: The Rock Raceway, Brakpan -->
                     <div id="card-rock" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
@@ -69,13 +50,7 @@
                         <p id="rock-temp">Temp: Loading...</p>
                         <p id="rock-condition">Condition: Loading...</p>
                         <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul class="text-sm list-disc list-inside">
-                            <li>25 January (Rock Mania)</li>
-                            <li>8 March (SA vs USA)</li>
-                            <li>12 April</li>
-                            <li>10 May</li>
-                            <li>14 June</li>
-                        </ul>
+                        <ul id="rock-schedule" class="text-sm list-disc list-inside"></ul>
                     </div>
                     <!-- Tile 4: Mahem Raceway, Pretoria -->
                     <div id="card-mahem" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
@@ -83,19 +58,7 @@
                         <p id="mahem-temp">Temp: Loading...</p>
                         <p id="mahem-condition">Condition: Loading...</p>
                         <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul class="text-sm list-disc list-inside">
-                            <li>8 February (Hot Rods SA vs UK)</li>
-                            <li>1 March</li>
-                            <li>5 April</li>
-                            <li>31 May</li>
-                            <li>28 June</li>
-                            <li>26 July</li>
-                            <li>16 August</li>
-                            <li>6 September</li>
-                            <li>4 October (Hot Rods)</li>
-                            <li>15 November</li>
-                            <li>6 December (Fireworks)</li>
-                        </ul>
+                        <ul id="mahem-schedule" class="text-sm list-disc list-inside"></ul>
                     </div>
                 </div>
             </section>
