--- a/index.html
+++ b/index.html
@@ -29,36 +29,44 @@
                 <h2 class="text-center text-2xl font-semibold text-blue-400 mb-4">Motorsport Weather</h2>
                 <div id="weather" class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <!-- Tile 1: Zwartkops Raceway, Pretoria -->
-                    <div id="card-zwartkops" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
-                        <h3 class="text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
-                        <p id="zwartkops-temp">Temp: Loading...</p>
-                        <p id="zwartkops-condition">Condition: Loading...</p>
-                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul id="zwartkops-schedule" class="text-sm list-disc list-inside"></ul>
+                    <div id="card-zwartkops" class="weather-card bg-[url('/images/Racing1.jpeg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
+                            <p id="zwartkops-temp">Temp: Loading...</p>
+                            <p id="zwartkops-condition">Condition: Loading...</p>
+                            <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="zwartkops-schedule" class="text-sm list-disc list-inside"></ul>
+                        </div>
                     </div>
                     <!-- Tile 2: Ultimate Raceway, Vereeniging -->
-                    <div id="card-ultimate" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
-                        <h3 class="text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
-                        <p id="ultimate-temp">Temp: Loading...</p>
-                        <p id="ultimate-condition">Condition: Loading...</p>
-                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul id="ultimate-schedule" class="text-sm list-disc list-inside"></ul>
+                    <div id="card-ultimate" class="weather-card bg-[url('/images/Racing2')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
+                            <p id="ultimate-temp">Temp: Loading...</p>
+                            <p id="ultimate-condition">Condition: Loading...</p>
+                            <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="ultimate-schedule" class="text-sm list-disc list-inside"></ul>
+                        </div>
                     </div>
                     <!-- Tile 3: The Rock Raceway, Brakpan -->
-                    <div id="card-rock" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
-                        <h3 class="text-lg font-bold">The Rock Raceway, Brakpan</h3>
-                        <p id="rock-temp">Temp: Loading...</p>
-                        <p id="rock-condition">Condition: Loading...</p>
-                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul id="rock-schedule" class="text-sm list-disc list-inside"></ul>
+                    <div id="card-rock" class="weather-card bg-[url('/images/Racing3')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-lg font-bold">The Rock Raceway, Brakpan</h3>
+                            <p id="rock-temp">Temp: Loading...</p>
+                            <p id="rock-condition">Condition: Loading...</p>
+                            <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="rock-schedule" class="text-sm list-disc list-inside"></ul>
+                        </div>
                     </div>
                     <!-- Tile 4: Mahem Raceway, Pretoria -->
-                    <div id="card-mahem" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left">
-                        <h3 class="text-lg font-bold">Mahem Raceway, Pretoria</h3>
-                        <p id="mahem-temp">Temp: Loading...</p>
-                        <p id="mahem-condition">Condition: Loading...</p>
-                        <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                        <ul id="mahem-schedule" class="text-sm list-disc list-inside"></ul>
+                    <div id="card-mahem" class="weather-card bg-[url('/images/Racing4')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-lg font-bold">Mahem Raceway, Pretoria</h3>
+                            <p id="mahem-temp">Temp: Loading...</p>
+                            <p id="mahem-condition">Condition: Loading...</p>
+                            <p class="text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="mahem-schedule" class="text-sm list-disc list-inside"></ul>
+                        </div>
                     </div>
                 </div>
             </section>
