--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2 class="text-center text-2xl font-semibold text-blue-400 mb-4">Motorsport Weather</h2>
                 <div id="weather" class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <!-- Tile 1: Zwartkops Raceway, Pretoria -->
-                    <div id="card-zwartkops" class="weather-card bg-[url('/images/Racing1.jpeg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-lg font-bold">Zwartkops Raceway, Pretoria</h3>
                             <p id="zwartkops-temp">Temp: Loading...</p>
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <!-- Tile 2: Ultimate Raceway, Vereeniging -->
-                    <div id="card-ultimate" class="weather-card bg-[url('/images/Racing2.jpeg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-ultimate" class="weather-card bg-[url('images/Racing2.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-lg font-bold">Ultimate Raceway, Vereeniging</h3>
                             <p id="ultimate-temp">Temp: Loading...</p>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <!-- Tile 3: The Rock Raceway, Brakpan -->
-                    <div id="card-rock" class="weather-card bg-[url('/images/Racing3.jpeg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-lg font-bold">The Rock Raceway, Brakpan</h3>
                             <p id="rock-temp">Temp: Loading...</p>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <!-- Tile 4: Mahem Raceway, Pretoria -->
-                    <div id="card-mahem" class="weather-card bg-[url('/images/Racing4.jpeg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div id="card-mahem" class="weather-card bg-[url('images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-lg font-bold">Mahem Raceway, Pretoria</h3>
                             <p id="mahem-temp">Temp: Loading...</p>
