--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Motorsport Weather</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js"></script>
+    <style>
+        /* Custom CSS for marquee effect */
+        @keyframes marquee {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+        .marquee {
+            display: inline-block;
+            white-space: nowrap;
+            animation: marquee 15s linear infinite;
+        }
+        .marquee-container {
+            overflow: hidden;
+            width: 100%;
+        }
+    </style>
 </head>
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto p-4 sm:p-6">
@@ -27,7 +43,14 @@
             <!-- Motorsport Weather -->
             <section id="motorsport" class="tab-content active">
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Motorsport & Weather</h2>
-                <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 sm:gap-6">
+                <!-- Upcoming Events Ticker -->
+                <div id="card-upcoming" class="bg-gray-800 p-2 rounded-lg shadow-md text-white mb-4">
+                    <div class="marquee-container">
+                        <span id="upcoming-schedule" class="marquee text-xs sm:text-sm"></span>
+                    </div>
+                </div>
+                <!-- Weather Tiles -->
+                <div id="weather" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
                     <!-- Tile 1: Zwartkops Raceway, Pretoria -->
                     <div id="card-zwartkops" class="weather-card bg-[url('images/Racing1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
@@ -67,11 +90,6 @@
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
-                    </div>
-                    <!-- Tile 5: Upcoming Events This Month -->
-                    <div id="card-upcoming" class="weather-card bg-gray-800 p-4 rounded-lg shadow-md text-left text-white">
-                        <h3 class="text-base sm:text-lg font-bold">Upcoming Events This Month</h3>
-                        <ul id="upcoming-schedule" class="text-xs sm:text-sm list-disc list-inside mt-2"></ul>
                     </div>
                 </div>
             </section>
