--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
                             <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold text-yellow-500"></h4>
+                            <img id="f1-flag" class="h-6 sm:h-8 inline-block ml-2" alt="Race Flag">
+                            <br>
+                            <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
                             <p id="f1-temp">Temp: Loading...</p>
                             <p id="f1-condition">Condition: Loading...</p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
