--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
                             <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold text-yellow-500"></h4>
-                            <img id="f1-flag" class="h-6 sm:h-8 inline-block ml-2" alt="Race Flag">
-                            <br>
+                            <div class="mt-1">
+                                <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
+                                <span id="f1-track-name" class="text-sm sm:text-base align-middle"></span>
+                            </div>
                             <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
                             <p id="f1-temp">Temp: Loading...</p>
                             <p id="f1-condition">Condition: Loading...</p>
