--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
                     <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
-                            <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold text-yellow-500"></h4>
+                            <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                             <div class="mt-1">
                                 <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
-                                <span id="f1-track-name" class="text-sm sm:text-base align-middle"></span>
+                                <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
                             </div>
                             <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
-                            <p id="f1-temp">Temp: Loading...</p>
-                            <p id="f1-condition">Condition: Loading...</p>
+                            <p id="f1-temp" class="temp-label" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
+                            <p id="f1-condition" class="condition-label" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
