--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                                 <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
                             </div>
                             <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
-                            <p id="f1-temp" class="temp-label" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
-                            <p id="f1-condition" class="condition-label" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
-                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
+                            <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
+                            <p class="text-xs sm:text-sm mt-2"><strong class="underline">2025 Schedule:</strong></p>
                             <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
                     </div>
