--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
                                 <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
                             </div>
-                            <p id="f1-session-times" class="text-xs sm:text-sm font-bold" style="color: #FFFF00"></p>
+                            <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
                             <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
                             <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
                             <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
